# wifi2sat

./: .gitignore  CLAUDE.md
gnss-data-collection/: README.md  X_raw.npy  build_finesat_dataset.py  build_raw_dataset.py  capture_sample.py  capture_sample_single.py  pyproject.toml  test-poly.py
gnss-data-collection/capture_breathing/: capture_breathing_sample.py
gnss-data-collection/finesat/: README.md
gnss-data-collection/finesat-data/: README.md  W_FineSat_Y.pth  gesture_en.ipynb
gnss-data-collection/knowledge-base/: 01-signal-model.md  02-data-inventory.md  03-coherence-experiment.md  04-data-quality.md  05-glossary.md  README.md
gnss-data-collection/samples/: m-260430-182848.rtcm  m-260430-182917.rtcm  m-260430-183001.rtcm  m-260515-084051.rtcm  m-260515-084121.rtcm  m-260515-084152.rtcm  m-260515-084322.rtcm  m-260515-084336.rtcm  push-260430-181536.rtcm  push-260430-181605.rtcm  push-260515-083419.rtcm  push-260515-083434.rtcm  push-260515-083503.rtcm  push-260515-083518.rtcm  push-260515-083532.rtcm  push-260515-083602.rtcm  push-260515-083616.rtcm  push-260526-180234.rtcm  (+27 more)
gnss-data-collection/samples-50-xgboost/: m-260430-182833.rtcm  m-260430-182947.rtcm  push-260430-181452.rtcm  push-260430-181521.rtcm  push-260430-181551.rtcm  pushpull-260430-181924.rtcm  star-260430-183457.rtcm  star-260430-183528.rtcm  triangle-260430-182200.rtcm  triangle-260430-182244.rtcm
gnss-data-collection/samples-old/: push-260428-1326.rtcm  push-260428-1328.rtcm
gnss-data-collection/samples-wo_sec/: push-260430-1009.rtcm  push-260430-1012.rtcm  push-260430-1014.rtcm
(+1840 files in other folders)
